Added ViewDragHelper